Add MLflow export import section

--- a/notebooks/rag_evaluation_with_mlflow.ipynb
+++ b/notebooks/rag_evaluation_with_mlflow.ipynb
@@ -1696,6 +1696,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MLflow Export Import\n",
+    "Copy MLflow objects (runs, experiments or registered models) from one MLflow tracking server (Databricks workspace) to another.\n",
+    "\n",
+    "https://github.com/mlflow/mlflow-export-import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
